WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132041
[iOS WebKit1] MemoryPressureHandler::respondToMemoryPressure called on wrong thread.
https://bugs.webkit.org/show_bug.cgi?id=132041
Summary
[iOS WebKit1] MemoryPressureHandler::respondToMemoryPressure called on wrong ...
Andreas Kling
Reported
2014-04-22 23:55:50 PDT
<
rdar://problem/16687238
>
Attachments
Patch
(1.61 KB, patch)
2014-04-22 23:56 PDT
,
Andreas Kling
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-04-22 23:56:18 PDT
Created
attachment 229960
[details]
Patch
Michael Saboff
Comment 2
2014-04-23 08:33:11 PDT
Comment on
attachment 229960
[details]
Patch r=me
Andreas Kling
Comment 3
2014-04-23 09:19:59 PDT
Committed
r167711
: <
http://trac.webkit.org/changeset/167711
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug