[iOS WebKit1] MemoryPressureHandler::respondToMemoryPressure called on wrong thread. <https://webkit.org/b/132041> <rdar://problem/16687238>

Always dispatch the memory pressure relief code on the main queue.
This is really only needed for iOS/WK1, but we might as well share the code.

Reviewed by Michael Saboff.

* platform/cocoa/MemoryPressureHandlerCocoa.mm:
(WebCore::MemoryPressureHandler::install):

Canonical link: https://commits.webkit.org/150128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167711 268f45cc-cd09-0410-ab3c-d52691b4dbfc